--- a/public/client/style.css
+++ b/public/client/style.css
@@ -1,3 +1,13 @@
 body {
 	padding-top: 5.5rem;
 }
+
+/* Hide the nested list */
+.nested {
+	display: none;
+  }
+  
+  /* Show the nested list when the "active" tag is present */
+.active {
+	display: block;
+  }
