--- a/public/client/style.css
+++ b/public/client/style.css
@@ -1,3 +1,15 @@
 body {
   padding-top: 5.5rem;
 }
+
+#msa {
+  width: 100%;
+  height: 100%;
+  font-family: monospace;
+}
+
+.biojs_msa_overviewbox {
+  border-color: black;
+  border-width: 2px;
+}
+
