--- a/public/client/style.css
+++ b/public/client/style.css
@@ -1,11 +1,11 @@
 body {
   padding-top: 5.5rem;
+  font-family: inherit !important;
 }
 
 #msa {
   width: 100%;
   height: 100%;
-  font-family: monospace;
 }
 
 .biojs_msa_overviewbox {
@@ -15,3 +15,4 @@ body {
 .biojs_msa_seqblock {
   border: 1px solid #000000;
 }
+
